# advanced-c

./: .gitignore  c.md  notes.md  temp.c
00/I/: 1.c  a.out  answer.txt  answers.txt  mofified1.c
04/00/: Makefile  main.c  mod.c
05/28/: challenge1.c  challenge2.c
06/00/: ex02.c  ex03.c  ex04.c  ex06.c  ex08.c  ex10.c  ex11.c
06/32/: a.out
06/34/: main.c
06/36/: main.c
06_DataTypesChallenges_Eckel/: BuildCM_Lin.sh  BuildCM_Win.sh  CMakeLists.txt  CleanCM.sh  README.md
06_DataTypesChallenges_Eckel/ex01/: CMakeLists.txt
06_DataTypesChallenges_Eckel/ex02/: CMakeLists.txt  main.c
06_DataTypesChallenges_Eckel/ex03/: CMakeLists.txt  main.c
06_DataTypesChallenges_Eckel/ex04/: CMakeLists.txt
06_DataTypesChallenges_Eckel/ex05/: CMakeLists.txt  main.c
06_DataTypesChallenges_Eckel/ex06/: CMakeLists.txt
06_DataTypesChallenges_Eckel/ex07/: CMakeLists.txt  main.c
06_DataTypesChallenges_Eckel/ex08/: CMakeLists.txt  main.c
06_DataTypesChallenges_Eckel/ex09/: CMakeLists.txt
06_DataTypesChallenges_Eckel/ex10/: CMakeLists.txt  main.c
06_DataTypesChallenges_Eckel/ex11/: CMakeLists.txt
08/: quiz4.txt
08/43/: challenge01.c  challenge02.c  challenge03.c
08/47/: main.c
08/51/: main.c
08/54/: main.c
09/: quiz05.txt
10/: quiz6.txt
10/65/: chal2.c
10/68/: main.c
10/71/: main.c
11/78/: chal1.c  chal2.c  chal3.c
12/: quiz8.txt
12/85/: main.c
13/: quiz9.txt
14/96/: chal1.c  chal2.c  (+2 more)
18/: quiz11.txt
19/: quiz12.txt
21/: quiz13.txt
22/: build-run-clean.sh  client1.c  client2.c  multi-cli-server.c  server.c
wd/: foo.txt  out.txt
(+100 files in other folders)
